# ctx

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  install.sh
.claude/: settings.json
.github/workflows/: release.yml
.skills/ctx/: SKILL.md
hooks/: hook-startup.sh  hook-user.sh
mcp/: README.md  ctx_mcp_server.py
src/: error.rs  main.rs
src/analysis/: git.rs  mod.rs  relevance.rs  symbols.rs  treesitter.rs  walker.rs
src/cache/: summaries.rs
src/commands/: capabilities.rs  config.rs  context_builder.rs  diff_context.rs  hook_inject.rs  init.rs  inject.rs  map.rs  mod.rs  related.rs  schema.rs  search.rs  status.rs  summarize.rs  version.rs
src/output/: mod.rs
tests/: integration_tests.rs
