[package]
name = "ctx"
version = "0.1.0"
edition = "2021"
description = "Context tool for coding agents"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
ignore = "0.4"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
colored = "2.1"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
